# blockchain

./: .gitignore  Cargo.toml  README.md  new_task.ipynb  private_key.pem  public_key.pem  vcpkg-configuration.json  vcpkg.json
backup/: f49bc4bf-628b-4671-8b24-cb867a4548c1.ipynb  f49bc4bf-628b-4671-8b24-cb867a4548c1.txt
bash/: make_a_vm.sh  make_a_vm_windows.sh  send_to_vm.sh
my_blocks/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
my_flops/: teraFLOP.txt
my_keys/: private_key_1710141686_50_1.pem  private_key_1710141686_50_2.pem  private_key_1710141686_50_3.pem  private_key_1710141686_50_4.pem  private_key_1710141698_18_5.pem  private_key_1710141698_18_6.pem  private_key_1710141698_18_7.pem  private_key_1710141698_18_8.pem
nodes/: onion.text
python/: cudaa.py  ping.py  requirements.ipynb  requirements.txt  task.py
src/: blockchain.rs  dummy_chain.rs  httpServer.rs  lib.rs  libp2p.rs  main.rs  mine.rs  nodes_contacting.rs  p2p.rs  ping_libp2p.py  ws.rs
src/libp2p/: behavior.rs  message.rs
tests/: tests.rs
torconfig/: dns.py  dns.txt  hostname  hs_ed25519_public_key  hs_ed25519_secret_key
