[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10.64"
async-std = "1.9"
libp2p = { version = "0.53.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }