[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10.64"
async-std = "1.9"
Tor_Traffic_Router = "0.2.0"
rocket = "0.5"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }  
zip = "0.6.6"
tokio-tungstenite = "0.21"
futures-util = "0.3"
blockchain_maker = "1.1.0"
tar = "0.4.26"
async-compat = "0.2.3"
url = "2.0" 
tokio-socks = "0.5" 
flate2 = "1.0"
