[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10.64"
async-std = "1.9"
Tor_Traffic_Router = "0.3.0"
rocket = "0.5"
uuid = { version = "1.0", features = ["v4"] }  
zip = "0.6.6"
blockchain_maker = "1.1.0"
tokio-socks = "0.5"
socks = "0.3.3"
futures = "0.3"
libp2p = { version = "0.53", features = ["tcp", "tls", "kad", "identify", "request-response", "cbor", "tokio", "dns", "noise", "yamux", "macros"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.1"
log = "0.4.20"